package Personajes;

import Objetos.*;

public class Enemigo extends Personaje {

    public Enemigo(String nombre, int vidaMaxima, Arma[] armas, String[][] sprite) {
        super(nombre, vidaMaxima, armas, sprite);

    }
}
