@startuml ClasesSimple

class Batalla{

}

abstract Personaje{

}

class Arma {

}


class Enemigo{

}   

class Heroe{

}

class RecuadroPersonaje {

}

class MenuAcciones {

}


Batalla o-l-> RecuadroPersonaje : Muestra 
Batalla o-r-> MenuAcciones : Muestra 

Personaje <|-u- Heroe
Personaje <|-u- Enemigo

Batalla *-d-> Heroe : Lucha 
Batalla *-d-> Enemigo : Lucha 

Personaje o-r-> Arma : Usa 



@enduml